2006-07-18  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_add.d: New test.
	* gas/arm/thumb2_add.s: New test.

2006-07-18  Maciej W. Rozycki  <macro@mips.com>

	* gas/mips/mips4.s, gas/mips/mips4.d: Enable the "pref" test.  Change
	arguments for "madd.s" so that the instruction is correct for mips1
	and still matches "bc3*".

2006-07-13 Dwarakanath Rajagopal	<dwarak.rajagopal@amd.com>
	   Michael Meissner		<michael.meissner@amd.com>

	* gas/i386/amdfam10.s: New file for amdfam10 instructions.
	* gam/i386/amdfam10.d: Ditto.
	* gas/i386/x86-64-amdfam10.s: Ditto.
	* gam/i386/x86-64-amdfam10.d: Ditto.

2006-07-12  Nick Clifton  <nickc@redhat.com>

	* gas/sh/basic.exp: Run "too_large" dump test.
	* gas/sh/too_large.s: New test file.  Check that .byte directives
	do not generate a bogus overflow message.
	* gas/sh/too_large.s: New test control file.

2006-07-05  Julian Brown  <julian@codesourcery.com>

	* gas/arm/vfp-neon-syntax.d: Tweak expected fmsrr syntax.
	* gas/arm/vfp-neon-syntax_t2.d: Likewise.
	* gas/arm/vfp2.d: Likewise.
	* gas/arm/vfp2_t2.d: Likewise.

2006-07-04  Thiemo Seufer  <ths@mips.com>

	* gas/mips/e32-rel2.d, gas/mips/e32-rel4.d: Use -mabi=32 for as.
	* gas/mips/mips.exp: Move mips16e testcase to ELF only tests.
	Run elf{el}-rel2 and elf-rel4 for all arches with gpr64. Run
	e32-rel2 and e32-rel4 also for 64 bit configurations.

2006-06-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run nops-1, nops-1-i386, nops-1-i686,
	nops-1-merom, nops-2, nops-2-i386, nops-2-merom, x86-64-nops-1,
	x86-64-nops-1-k8, x86-64-nops-1-nocona and x86-64-nops-1-merom.

	* gas/i386/nops-1.s: New file.
	* gas/i386/nops-2.s: Likewise.
	* gas/i386/nops-1-i386.d: Likewise.
	* gas/i386/nops-1-i686.d: Likewise.
	* gas/i386/nops-1-merom.d: Likewise.
	* gas/i386/nops-1.d: Likewise.
	* gas/i386/nops-2-i386.d: Likewise.
	* gas/i386/nops-2-merom.d: Likewise.
	* gas/i386/nops-2.d: Likewise.
	* gas/i386/x86-64-nops-1.s: Likewise.