@@ -373,6 +373,9 @@
 	# SLDT
 #        SLDT (%eax)	              #  --  67	 -- --	 0F 00 00	                 ; A32 override: (Addr64) = ZEXT(Addr32 )
         SLDT %eax	              #  --  --	 -- --	 0F 00 C0
+        SLDT %rax	              #  --  --	 -- 48	 0F 00 C0
+        SLDT %ax	              #  66  --	 -- --	 0F 00 C0
+        SLDT (%rax)	              #  --  --	 -- --	 0F 00 00
 
 	# SWAPGS
 
@@ -392,7 +395,17 @@
 	xchg %ax,%ax		      # 66  --	 -- --	 90
 	xchg %eax,%eax		      # --  --	 -- --	 87 C0
 	xchg %rax,%rax		      # --  --	 -- --	 90
-	rex64 xchg %rax,%rax	      # 48  --	 -- --	 90
+	rex64 xchg %rax,%rax	      # --  --	 -- 48	 90
 	xchg %rax,%r8		      # --  --	 -- 49	 90
+
+        smsw %rax	              #  --  --	 -- 48	 0F 01 e0
+        smsw %eax	              #  --  --	 -- --	 0F 01 e0
+        smsw %ax	              #  66  --	 -- --	 0F 01 e0
+        smsw (%rax)	              #  --  --	 -- --	 0F 01 20
+
+        str %rax	              #  --  --	 -- 48	 0F 00 c8
+        str %eax	              #  --  --	 -- --	 0F 00 c8
+        str %ax		              #  66  --	 -- --	 0F 00 c8
+        str (%rax)	              #  --  --	 -- --	 0F 00 08
 
  .p2align 4,0
